services s1 modified, s3 (planets) added

--- a/service-3.html
+++ b/service-3.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="принты своими руками, DIY майки, цішотка сваімі рукамі, самаробныя прынты.">
+    <meta name="description" content="принты своими руками, DIY майки, цішотка сваімі рукамі, самаробныя прынты, цішотка, падарунак для гіка, планеты, меркурый, венера, зямля, марс, юпітар, сатурн, уран, нептун, плутон, луна, майка, майка с рисунком, подарок, планеты, майка с планетой, меркурий, венера, земля, марс, юпитер, сатурн, уран, нептун, плутон, цішотка з планетай">
 
-    <title>Гік-лаўка - Цішотка на замову. Ваша ідэя на цішотцы</title>
+    <title>Гік-лаўка - Цішоткі з планетамі</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -45,8 +45,8 @@
         <div class="row sticky-caption">
             <div class="col-lg-8">
 <div class="caption-product">
-		<h1 class="pull-right">Кошт: дамоўны</h1>
-                <h1 class="page-header">Цішотка на замову
+		<h1 class="pull-right">Кошт: 45 руб</h1>
+                <h1 class="page-header">Цішоткі з планетамі
                 </h1>
 </div>
             </div>
@@ -60,22 +60,30 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/services/s1/paint_t_shirts_1_mini.jpg" alt="" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/services/s1/paint_t_shirts_2_mini.jpg" alt="" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/services/s1/paint_t_shirts_3_mini.jpg" alt="" data-action="zoom"></p>
+                <p><img class="img-responsive" src="images/services/s3/mercury_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/venus_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/earth_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/mars_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/jupiter_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/saturn_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/uranus_1_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/neptun_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/pluto_mini_name.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/people_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s3/mercury_2_mini.JPG" alt="" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
 		<h3>Апісанне</h3>
-		<p>Даўно хацелі майку са сваім уласным малюнкам або выявай? Самы час замовіць сабе унікальную цішотку зробленую пад вашу ідэю. Цішотка сваімі рукамі робіцца з дапамогай акрылавай фарбы і нашых гікаўскіх пэнзлікаў. Звычайна замовы прымаем за 5-7 дзён.</p>
+		<p>Цішоткі прысвячаюцца любіцелям космаса і нашай Сонечнай сістэмы. Планеты, названыя ў гонар багоў з даўніх часоў вызывалі эмоцыі ў людзей.</p>
+		<p>Кожны можа знайсці адлюстраванне свайго характару ў той, ці іншай планеце: у самоце Плутона, газавай бране і велічы Юпітэра, у ачараванні невядомай Венеры, у бадзёрасці гарачага Меркурыя...</p>
 
-		<h3 class="vodst-up-30">Што падрыхтаваць:</h3>
+		<h3 class="vodst-up-30">Як карыстаць:</h3>
 		<ul>
-			<li>Цішотку вашага памера і колера (ці набываеце самастойна, ці дамаўляемся маляваць на нашай).</li>
-			<li>Макет або выяву таго, што жадаеце далучыце спасылкай да замовы.</li>
+			<li>Замовіць цішотку, якая паказвае вашу ўнікальнасць, і занасіць да дыр.</li>
+			<li>Падарыць каханай, ці каханаму, як "зорцы", што вядзе вас да подзвігаў.</li>
+			<li>Апрануць цішотку, вывучаць космас і сабіраць заплечнік для далёкіх вандровак.</li>
 		</ul>
-
-<!--		<a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>   -->
 
 
             </div>
