--- a/services.html
+++ b/services.html
@@ -100,6 +100,19 @@
             </div>
 
  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right"></h3>
+                                <h3><a href="service-3.html">Цішоткі з планетамі</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="service-3.html"><img class="img-responsive" src="images/services/s3/uranus_1_mini.JPG" alt=""></a>
+		    <div class="text1"><p>Цішоткі з планетамі</p></div>
+                </div>
+
+            </div>
 
 
         </div>
