--- a/product-11.html
+++ b/product-11.html
@@ -43,7 +43,7 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-            <div class="col-lg-8">
+            <div class="col-sm-8">
 <div class="caption-product">
 		<h1 class="pull-right">12 руб.</h1>
                 <h1 class="page-header">Плакаты ад Фур'е
@@ -51,7 +51,7 @@
                 </h1>
 </div>
             </div>
-            <div class="col-lg-4 caption-button">
+            <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
