--- a/service-3.html
+++ b/service-3.html
@@ -43,14 +43,14 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-            <div class="col-lg-8">
+            <div class="col-sm-8">
 <div class="caption-product">
 		<h1 class="pull-right">Кошт: 45 руб</h1>
                 <h1 class="page-header">Цішоткі з планетамі
                 </h1>
 </div>
             </div>
-            <div class="col-lg-4 caption-button">
+            <div class="col-sm-4 caption-button">
                 <a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>
             </div>
         </div>
@@ -84,6 +84,8 @@
 			<li>Падарыць каханай, ці каханаму, як "зорцы", што вядзе вас да подзвігаў.</li>
 			<li>Апрануць цішотку, вывучаць космас і сабіраць заплечнік для далёкіх вандровак.</li>
 		</ul>
+        <p class="vodst-up-30 vodst-down-30">* Замовіць паслугу можна праз кантактную форму </p>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць паслугу</a>
 
 
             </div>
