--- a/workshop-2.html
+++ b/workshop-2.html
@@ -43,14 +43,14 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-            <div class="col-lg-8">
+            <div class="col-sm-8">
 <div class="caption-product">
 		<h1 class="pull-right">5 руб.</h1>
                 <h1 class="page-header">Майстар-клас "Вырабляем diy-магніты"
                 </h1>
 </div>
             </div>
-            <div class="col-lg-4 caption-button">
+            <div class="col-sm-4 caption-button">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default page-header">Удзельнічай</a>
             </div>
         </div>
