--- a/product-15.html
+++ b/product-15.html
@@ -43,14 +43,14 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-            <div class="col-lg-8">
+            <div class="col-sm-8">
 <div class="caption-product">
 		<h1 class="pull-right">35 руб.</h1>
                 <h1 class="page-header">DIY-цішоткі free software
                 </h1>
 </div>
             </div>
-            <div class="col-lg-4 caption-button">
+            <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
