--- a/service-2.html
+++ b/service-2.html
@@ -43,14 +43,14 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-            <div class="col-lg-8">
+            <div class="col-sm-8">
 <div class="caption-product">
 		<h1 class="pull-right">Дамоўны кошт</h1>
                 <h1 class="page-header">Паслуга "Унікальны ровар"
                 </h1>
 </div>
             </div>
-            <div class="col-lg-4 caption-button">
+            <div class="col-sm-4 caption-button">
                 <a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>
             </div>
         </div>
@@ -87,7 +87,8 @@
 			<li>Пакінуць <a href="https://geeklauka.by/contact.html" target="_blank">заяўку</a>.</li>
 		</ul>
 		<p><strong> Кошт:</strong> дамоўны</p>
-		
+		<p class="vodst-up-30 vodst-down-30">* Замовіць паслугу можна праз кантактную форму </p>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць паслугу</a>
             </div>
 
         </div>
