change header template, generate diy icons via js

--- a/service-2.html
+++ b/service-2.html
@@ -44,12 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">Дамоўны кошт</h1>
-                <h1 class="page-header">Паслуга "Унікальны ровар"
+                <h1 class="caption-product page-header">
+                    Паслуга "Унікальны ровар"
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">Кошт: дамоўны</h1>
+            </div>                 
             <div class="col-sm-4 caption-button">
                 <a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>
             </div>
