--- a/workshop-3.html
+++ b/workshop-3.html
@@ -43,13 +43,12 @@
 
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
-                <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">5 руб.</h1>
-                <h1 class="page-header">Майстар-клас "Ethernet нішцякі"
+            <div class="col-sm-8">
+                <h1 class="caption-product page-header">
+                    Майстар-клас "Ethernet нішцякі"
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">5 руб</h1>
+            </div>             
             <div class="col-sm-4 caption-button">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default page-header">Удзельнічай</a>
             </div>
