--- a/product-1.html
+++ b/product-1.html
@@ -44,12 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">7 руб.</h1>
-                <h1 class="page-header">Кансольныя паштоўкі 
-		<small>кошт за камплект (7 штук)</small>
+                <h1 class="caption-product page-header">
+                    Кансольныя паштоўкі 
+                    <small>кошт за камплект (7 штук)</small>
                 </h1>
-</div>
+                <h1 class="caption-price">7 руб.</h1>
             </div>
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
