--- a/product-12.html
+++ b/product-12.html
@@ -44,13 +44,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">4 руб.</h1>
-                <h1 class="page-header">Значкі для гіка
-		<small>Две штукі</small>
+                <h1 class="caption-product page-header">
+                    Значкі для гіка
+		            <small>Две штукі</small>
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">4 руб.</h1>
+            </div>                  
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
