--- a/product-19.html
+++ b/product-19.html
@@ -44,11 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-                <div class="caption-product">
-		            <h1 class="pull-right">45 руб.</h1>
-                    <h1 class="page-header">Байкі free software</h1>
-                </div>
-            </div>
+                <h1 class="caption-product page-header">
+                    Байкі free software
+                </h1>
+                <h1 class="caption-price">45 руб.</h1>
+            </div>              
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
