--- a/product-22.html
+++ b/product-22.html
@@ -44,11 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-                <div class="caption-product">
-                    <h1 class="pull-right">35 руб.</h1>
-                    <h1 class="page-header">Цішотка Дзяліся дарогай</h1>
-                </div>
-            </div>
+                <h1 class="caption-product page-header">
+                    Цішотка Дзяліся дарогай
+                </h1>
+                <h1 class="caption-price">35 руб.</h1>
+            </div>               
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
