--- a/product-5.html
+++ b/product-5.html
@@ -45,13 +45,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">2 руб.</h1>
-                <h1 class="page-header">Налепкі для гікаў 
-		<small>класічныя, кошт за камплект (6 штук)</small>
+                <h1 class="caption-product page-header">
+                    Налепкі для гікаў 
+                    <small>класічныя, кошт за камплект (6 штук)</small>
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">2 руб.</h1>
+            </div>    
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
