--- a/product-6.html
+++ b/product-6.html
@@ -45,13 +45,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">3 руб.</h1>
-                <h1 class="page-header">Мэш-налепкі 
-		<small>кошт за камплект (5 штук)</small>
+                <h1 class="caption-product page-header">
+                    Мэш-налепкі 
+		            <small>кошт за камплект (5 штук)</small>
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">3 руб.</h1>
+            </div>    
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
