--- a/service-3.html
+++ b/service-3.html
@@ -44,12 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-<div class="caption-product">
-		<h1 class="pull-right">Кошт: 45 руб</h1>
-                <h1 class="page-header">Цішоткі з планетамі
+                <h1 class="caption-product page-header">
+                    Цішоткі з планетамі
                 </h1>
-</div>
-            </div>
+                <h1 class="caption-price">Кошт: 45 руб</h1>
+            </div>                  
             <div class="col-sm-4 caption-button">
                 <a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>
             </div>
