added new goods and workshop

--- a/index.html
+++ b/index.html
@@ -105,6 +105,56 @@ END Donate block -->
         </div>
         <!-- /.row -->
 
+<!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">30 р</h3>
+                                <h3><a href="product-25.html">Цішотка "Кахай..."</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-25.html"><img class="img-responsive" src="images/products/pr25/love_n_geek_27_cover.JPG" alt=""></a>
+	            <div class="text1"><p>30 руб.</p></div>
+                </div>
+
+            </div>
+
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">30 р</h3>
+                                <h3><a href="product-26.html">Цішотка "Гіч!"</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-26.html"><img class="img-responsive" src="images/products/pr26/love_n_geek_30_cover.JPG" alt=""></a>
+		    <div class="text1"><p>30 руб.</p></div>
+                </div>
+
+            </div>
+
+  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">65 р</h3>
+                                <h3><a href="product-27.html">Худзі "Кахай і гіч!"</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-27.html"><img class="img-responsive" src="images/products/pr27/love_n_geek_26_cover.JPG" alt=""></a>
+		    <div class="text1"><p>65 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
 
        	<!-- Projects Row -->
         <div class="row products">
