--- a/workshops.html
+++ b/workshops.html
@@ -119,6 +119,29 @@
         <!-- /.row -->
 
 
+	<!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">15 р</h3>
+                                <h3><a href="workshop-4.html">Размалюй цішотку</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="workshop-4.html"><img class="img-responsive" src="images/workshops/w4/mk_tishotka_cover_mini.JPG" alt=""></a>
+	            <div class="text1"><p>15 руб.</p></div>
+                </div>
+
+            </div>
+
+
+
+        </div>
+        <!-- /.row -->
+
+
     </div>
     <!-- /.container -->
 
