products to index

--- a/navigation.html
+++ b/navigation.html
@@ -23,7 +23,7 @@
                 <a class="page-scroll" href="about.html">Пра нас</a>
             </li>
             <li data-section="products">
-                <a class="page-scroll" href="products.html">Тавары</a>
+                <a class="page-scroll" href="index.html">Тавары</a>
             </li>
 	        <li data-section="services">
                 <a class="page-scroll" href="services.html">Паслугі</a>
