added stickers and fixed links to images

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ END Donate block -->
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">4 р</h3>
-                                <h3><a href="product-28.html">Сардэчкі Майнкрафта (вялікія)</a>
+                                <h3><a href="product-28.html">Майнкрафт <3 (вялікія)</a>
                                 </h3>
                 </div>                
 
@@ -167,7 +167,7 @@ END Donate block -->
  	 <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">2 р</h3>
-                                <h3><a href="product-29.html">Сардэчкі з майнкрафта</a>
+                                <h3><a href="product-29.html">Майнкрафта <3</a>
                                 </h3>
                 </div>                
 
