28-30 goods bug fixes

--- a/product-28.html
+++ b/product-28.html
@@ -62,10 +62,10 @@
         <div class="row">
 
             <div class="col-md-8">
-		<p><img class="img-responsive" src="images/products/pr29/love_big_1_mini.JPG" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/products/pr29/love_big_2_mini.JPG" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/products/pr29/love_big_3_mini.JPG" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/products/pr29/love_big_4_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr28/love_big_1_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr28/love_big_2_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr28/love_big_3_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr28/love_big_4_mini.JPG" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
@@ -84,7 +84,7 @@
 		</ul>
 
 		<p><strong>Камплектацыя:</strong> 6 штук</p>
-		<p><strong>Памеры:</strong> вышыня - 70 мм , шырыня - 70 мм</p>
+		<p><strong>Памеры:</strong> вышыня - 70 мм</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
