--- a/product-29.html
+++ b/product-29.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="minecraft heart, васьмибітнае сэрдца, восьмибитное сердце, наклейка с сердцем, валентинка для гика, валянцінка для гіка.">
 
-    <title>Гік-лаўка - Сардэчкі з майнкрафта</title>
+    <title>Гік-лаўка - Сардэчкі Майнкрафта</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -47,7 +47,7 @@
                 <div class="caption-product">
 		            <h1 class="pull-right">2 руб.</h1>
                     <h1 class="page-header">
-                        Сардэчкі з майнкрафта
+                        Сардэчкі Майнкрафта
 			<small>У камплецке 7 штук</small>
                     </h1>
                 </div>
@@ -63,9 +63,9 @@
 
 
 	    <div class="col-md-8">
-		<p><img class="img-responsive" src="images/products/pr28/love_small_1_mini.JPG" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/products/pr28/love_small_2_mini.JPG" data-action="zoom"></p>
-		<p><img class="img-responsive" src="images/products/pr28/love_small_3_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr29/love_small_1_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr29/love_small_2_mini.JPG" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/products/pr29/love_small_3_mini.JPG" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
@@ -79,11 +79,11 @@
 		<ul>
 			<li>Зручны памер дазваляе гэтыя нелепкі памясціць на лэптопе, мабільніку, роліках або нататніку, ці нават ровару.</li>
 			<li>Наогул сэрдца - гэта знак кахання, карыстайце яго абярэжна.</li>
-			<li>Паспрабуйце яго выкарыстаць, як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraf">майнкрафт</a>.</li>
+			<li>Паспрабуйце яго выкарыстаць, як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraf">Майнкрафт</a>.</li>
 		</ul>
 
 		<p><strong> Камплектацыя:</strong> 7 штук</p>
-		<p><strong> Памер:</strong> 40мм на 40мм.</p>
+		<p><strong> Памер:</strong> вышыня - 40 мм</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
