--- a/product-30.html
+++ b/product-30.html
@@ -73,14 +73,14 @@
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
-<p>Мы падтрымліваем разнастайнасць, таму вырашылі гэты пак стварыць для тых, хто кахае адзін аднаго. Наогул наша гасла "Кахай і гіч", іншымі словамі, калі у вас ёсць каханне вы маеце амаль усё, што неабходна, толькі дадаць Кахай пак.</p>
+<p>Мы падтрымліваем разнастайнасць, таму вырашылі гэты пак стварыць для тых, хто кахае адзін аднаго. Наогул наша гасла "Кахай і гіч", іншымі словамі, калі ў вас ёсць каханне вы маеце амаль усё, што неабходна, толькі дадаць Кахай пак.</p>
 
 <p>Яшчэ гэты налепкі пераклікаюцца з актыўнасцю Фаланстэра па распаўсюду бяздротавых сетак - мэш. Мы за разнастайнасць сярод камунікацый таксама.</p>
 
 <p>Камплектацыя: у кахай пак уваходзіць 4 налепкі і 4 магніта.</p>
 <p>Ёсць 2 розных камплекта "Кахай пака".</p>
 
-		<h4>Зыходнікі<a href="https://github.com/rizomaa/prints/blob/master/8-bit-heart/love_vars.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  на сэрдцы</a> і <a href="https://github.com/beMesh/stickers/tree/master/1">на мэш налепкі</a></h4>
+		<h4>Зыходнікі <a href="https://github.com/rizomaa/prints/blob/master/8-bit-heart/love_vars.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  на сэрцы</a> і <a href="https://github.com/beMesh/stickers/tree/master/1">на мэш налепкі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Набыць і палову падарыць каханай дзяўчыне або хлопцу.</li>
@@ -88,7 +88,7 @@
 			<li>Правесці апытанку сярод знаёмых: ці могуць людзі любіць робата. Палову пакінуць машыне, палову - самаму цікаваму адказу.</li>
 		</ul>
 
-		<p><strong>Памеры: </strong> сэрдцы 40на40 мм, мэш 50на50 мм.</p>
+		<p><strong>Памеры: </strong> сэрцы: вышыня 40 мм, мэш: 50на50 мм.</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
