--- a/product-25.html
+++ b/product-25.html
@@ -70,11 +70,11 @@
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
-<p>Кахай і гіч! - гэта слоган Гік-лаўкі. Мы варышылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і пачалі з цішотак.</p>
+<p>"Кахай і гіч!" - гэта слоган Гік-лаўкі. Мы варашылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і пачалі з цішотак.</p>
 
-<p>Лаканічна. Гік-лаўка - падзяляе пашырэнне прынцыпаў адкрытага доступа да ведаў і свабоднага праграмнага забеспячэння, але мы таксама ўмеем кахаць.</p>
+<p>Лаканічна. Гік-лаўка падзяляе пашырэнне прынцыпаў адкрытага доступа да ведаў і свабоднага праграмнага забеспячэння, але мы таксама ўмеем кахаць.</p>
 
-<p>Цішотку можа замовіць, як хлопец так і дзяўчына. Кожная выява зроблена ўручную.</p>
+<p>Цішотку можа замовіць як хлопец так і дзяўчына. Кожная выява зроблена ўручную.</p>
 
 
 <h4><a href="https://github.com/rizomaa/prints/blob/master/kahai-i-gich/heart-for-geeklauka.pdf" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> і <a href="https://github.com/rizomaa/prints/blob/master/kahai-i-gich/kahai-i-gich.svg">задняя частка</a> + шрыфт Ubuntu Mono</h4>
@@ -82,9 +82,9 @@
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Набыць цішотку з сэрдам і шукаць каханне.</li>
+			<li>Набыць цішотку з сэрдцам і шукаць каханне.</li>
 			<li>Апрануць цішотку і расшарыць сваю творчасць пад свабоднымі ліцэнзіямі.</li>
-			<li>Падарыць сяброўцы ці сябру, якія fell in love</li>
+			<li>Падарыць сяброўцы ці сябру, якія fell in love.</li>
 		</ul>
 
 		<p><strong> Памер і колер цішоткі:</strong> пазначайце ў замове.</p>
