--- a/product-26.html
+++ b/product-26.html
@@ -72,23 +72,23 @@
 		<h3>Гісторыя і апісанне</h3>
 
 
-<p>Кахай і гіч! - гэта слоган Гік-лаўкі. Мы варышылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і пачалі з цішотак.</p>
+<p>"Кахай і гіч!" - гэта слоган Гік-лаўкі. Мы варашылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і пачалі з цішотак.</p>
 
-<p>Лаканічна. Гік-лаўка - падзяляе адкрыты доступ да ведаў і свабоднае праграмнае забеспячэнне, але мы таксама ўмеем кахаць.</p>
+<p>Лаканічна. Гік-лаўка падзяляе адкрыты доступ да ведаў і свабоднае праграмнае забеспячэнне, але мы таксама ўмеем кахаць.</p>
 
-<p>Гіч! - значыць заставайся сабой і даследуй гэты свет, не звяртай увагі на перасцярогі рой у глыбіню.</p>
+<p>Гіч! - значыць заставайся сабой і даследуй гэты свет, не звяртай увагі на перасцярогі, рой у глыбіню.</p>
 
-<p>Цішотку можа замовіць, як дзяўчына так і хлопец. Кожная выява зроблена ўручную.</p>
+<p>Цішотку можа замовіць як дзяўчына так і хлопец. Кожная выява зроблена ўручную.</p>
 
 		<h4><a href="https://github.com/rizomaa/prints/blob/master/kahai-i-gich/heart-for-geeklauka.svg"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> і <a href="https://github.com/rizomaa/prints/blob/master/kahai-i-gich/kahai-i-gich.svg">задняя частка</a> + шрыфт Ubuntu Mono</h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Прымеціць сярод сяброў душу, якая закахала і зрабіць падарунак.</li>
-			<li>Прапанаваць дзяўчыне(хлопцу), якія халіпаюць на сваіх справах</li>
+			<li>Прымеціць сярод сяброў душу, якая закахала, і зрабіць падарунак.</li>
+			<li>Прапанаваць дзяўчыне(хлопцу), якія заліпаюць на сваіх справах</li>
 			<li>Проста насіць у сваё задавальнне і даследваць свет.</li>
 		</ul>
 
-		<p><strong> Памер і колер (іх зараз 2 чорны і белы) цішоткі:</strong> пазначайце ў замове.</p>
+		<p><strong> Памер і колер (іх зараз 2 - чорны і белы) цішоткі:</strong> пазначайце ў замове.</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
