--- a/product-27.html
+++ b/product-27.html
@@ -72,18 +72,18 @@
 		<h3>Гісторыя і апісанне</h3>
 
 
-<p>Кахай і гіч! - гэта слоган Гік-лаўкі. Мы варашылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і ў дадатак да цішотак стварылі худзі!</p>
+<p>"Кахай і гіч!" - гэта слоган Гік-лаўкі. Мы варашылі стварыць калекцыю сувеніраў і рознага свэга з такой жа назвай і ,ў дадатак да цішотак, стварылі худзі!</p>
 
-<p>Лаканічна. Гік-лаўка - падзяляе адкрыты доступ да ведаў і свабоднае праграмнае забеспячэнне, але мы таксама ўмеем кахаць. </p>
+<p>Лаканічна. Гік-лаўка падзяляе адкрыты доступ да ведаў і свабоднае праграмнае забеспячэнне, але мы таксама ўмеем кахаць. </p>
 
-<p>Худзі можа замовіць, як хлопец так і дзяўчына. Кожная выява зроблена ўручную.</p>
+<p>Худзі можа замовіць як хлопец так і дзяўчына. Кожная выява зроблена ўручную.</p>
 
 		<h4><a href="https://github.com/rizomaa/prints/tree/master/404" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> і <a href="https://github.com/rizomaa/prints/blob/master/kahai-i-gich/kahai-i-gich.svg">задняя частка</a> + шрыфт Ubuntu Mono</h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Зіма ў нас настае рана ці позна. Худзі можна насіць круглы год, асабліва калі лета не багата на сонечныя дні. Таму першы алгарытм - прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Зіма ў нас настае рана ці позна. Худзі можна насіць круглы год, асабліва калі лета не багатае на сонечныя дні. Таму першы алгарытм - прыглядзець для сябе памерчык і насіць да дыр.</li>
 			<li>Худзі выдатны падарунак амаль у любы час году і зробіць дзень вашай дзяўчыне або хлопцу. Не тармазі!</li>
-			<li>Калі вы ужо працуеце ў кансолі гэта байка вас будзе грэць удвайне. Канешне вы зачэпіце гіка ёй. Дакладна. </li>
+			<li>Калі вы ўжо працуеце ў кансолі, гэта байка вас будзе грэць удвайне. Канешне вы зачэпіце гіка ёй. Дакладна. </li>
 		</ul>
 
 
