--- a/workshop-4.html
+++ b/workshop-4.html
@@ -72,8 +72,8 @@
 
 <h3 class="vodst-up-30">Для каго:</h3>
 <ul>
-<li>Хто жадае зрабіць малюнак на цішотцы сваімі рукамі для сябе, сябра або сяброўкі?</li>
-<li>Вы - DIY-гік Любіць даследваць новыя тэхнікі і ручныя тэхналогіі.</li>
+<li>Хто жадае зрабіць малюнак на цішотцы сваімі рукамі для сябе, сябра або сяброўкі.</li>
+<li>Вы - DIY-гік. Любіце даследваць новыя тэхнікі і ручныя тэхналогіі.</li>
 <li>Шукаеце сустрэчы ў рэале з камандай Гік-лаўкі.</li>
 </ul>
 
@@ -81,9 +81,9 @@
 
 <h3 class="vodst-up-30">Што падрыхтаваць:</h3>
 <ul>
-<li>Цішотку, байку, або іншую рэч, на якую вы збірайцеся наносіць выяву (пажадана, светлую).</li>
-<li>Саму выяву (малюнак). Калі не маеце ідэй мы можам прапанаваць ідэю і макет.</li>
-<li>Адразу прадумаць памер, і калі ён больш за А4 даслаць інфармацыю нам нам, мы дапаможам зарыентаваць як лепей трафарэціць яе.</li>
+<li>Цішотку, байку або іншую рэч, на якую вы збіраецеся наносіць выяву (пажадана, светлую).</li>
+<li>Саму выяву (малюнак). Калі не маеце ідэй, мы можам прапанаваць ідэю і макет.</li>
+<li>Адразу прадумаць памер, і калі ён больш за А4, даслаць інфармацыю нам. Мы дапаможам зарыентаваць, як лепей трафарэціць яе.</li>
 </ul>
 		
 		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу можна па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
