--- a/product-28.html
+++ b/product-28.html
@@ -48,7 +48,7 @@
 		            <h1 class="pull-right">4 руб.</h1>
                     <h1 class="page-header">
                         Сардэчкі Майнкрафта (вялікія)
-			<small>У камплецке 6 штук</small>
+			<small>У камплекце 6 штук</small>
                     </h1>
                 </div>
             </div>
@@ -72,15 +72,15 @@
 		<h3>Гісторыя і апісанне</h3>
 
 
-<p>Насамрэч гэта звычайныя васьмібітныя рознакаляровыя сэрцы.</p>
+<p>Насамрэч гэта звычайныя васьмібітныя рознакаляровыя сэрдцы.</p>
 
 		<h4><a href="https://github.com/rizomaa/prints/blob/master/8-bit-heart/love_vars.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Налепку шлёпнуць на лэптоп, мабільнік, блакнот, ці ровар.</li>
+			<li>Налепку шлёпнуць на лэптоп, мабільнік, блакнот ці ровар.</li>
 			<li>Наогул, сэрдца - гэта знак кахання, карыстайце яго абярэжна.</li>
-			<li>Паспрабуйце выкарыстаць налепку, як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraft" target="_blank">Майнкрафт</a>.</li>
+			<li>Паспрабуйце выкарыстаць налепку як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraft" target="_blank">Майнкрафт</a>.</li>
 		</ul>
 
 		<p><strong>Камплектацыя:</strong> 6 штук</p>
