Product-29 spelling corrected

--- a/product-29.html
+++ b/product-29.html
@@ -48,7 +48,7 @@
 		            <h1 class="pull-right">2 руб.</h1>
                     <h1 class="page-header">
                         Сардэчкі Майнкрафта
-			<small>У камплецке 7 штук</small>
+			<small>У камплекце 7 штук</small>
                     </h1>
                 </div>
             </div>
@@ -71,15 +71,15 @@
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
-<p>Насамрэч гэта звычайныя васьмібітныя рознакаляровыя сэрцы.</p>
+<p>Насамрэч гэта звычайныя васьмібітныя рознакаляровыя сэрдцы.</p>
 
 
 		<h4><a href="https://github.com/rizomaa/prints/blob/master/8-bit-heart/love_vars.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Зручны памер дазваляе гэтыя нелепкі памясціць на лэптопе, мабільніку, роліках або нататніку, ці нават ровару.</li>
+			<li>Зручны памер дазваляе гэтыя налепкі памясціць на лэптопе, мабільніку, роліках або нататніку, ці нават ровары.</li>
 			<li>Наогул сэрдца - гэта знак кахання, карыстайце яго абярэжна.</li>
-			<li>Паспрабуйце яго выкарыстаць, як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraf">Майнкрафт</a>.</li>
+			<li>Паспрабуйце яго выкарыстаць як макет для стварэння падобнага сэрдца ў гульні <a href="https://be.wikipedia.org/wiki/Minecraf">Майнкрафт</a>.</li>
 		</ul>
 
 		<p><strong> Камплектацыя:</strong> 7 штук</p>
