Product-30 spelling checked

--- a/product-30.html
+++ b/product-30.html
@@ -48,7 +48,7 @@
 		            <h1 class="pull-right">5 руб.</h1>
                     <h1 class="page-header">
                         Кахай пак
-			<small>У камплецке 4 магніта і 4 налепкі</small>
+			<small>У камплекце 4 магніта і 4 налепкі</small>
                     </h1>
                 </div>
             </div>
@@ -73,11 +73,11 @@
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
-<p>Мы падтрымліваем разнастайнасць, таму вырашылі гэты пак стварыць для тых, хто кахае адзін аднаго. Наогул наша гасла "Кахай і гіч", іншымі словамі, калі ў вас ёсць каханне вы маеце амаль усё, што неабходна, толькі дадаць Кахай пак.</p>
+<p>Мы падтрымліваем разнастайнасць, таму вырашылі гэты пак стварыць для тых, хто кахае адзін аднаго. Наогул наша гасла "Кахай і гіч", іншымі словамі, калі ў вас ёсць каханне, вы маеце амаль усё, што неабходна, толькі дадаць Кахай пак.</p>
 
-<p>Яшчэ гэты налепкі пераклікаюцца з актыўнасцю Фаланстэра па распаўсюду бяздротавых сетак - мэш. Мы за разнастайнасць сярод камунікацый таксама.</p>
+<p>Яшчэ гэтыя налепкі пераклікаюцца з актыўнасцю Фаланстэра па распаўсюду бяздротавых сетак - мэш. Мы за разнастайнасць сярод камунікацый таксама.</p>
 
-<p>Камплектацыя: у кахай пак уваходзіць 4 налепкі і 4 магніта.</p>
+<p>Камплектацыя: у кахай пак уваходзяць 4 налепкі і 4 магніта.</p>
 <p>Ёсць 2 розных камплекта "Кахай пака".</p>
 
 		<h4>Зыходнікі <a href="https://github.com/rizomaa/prints/blob/master/8-bit-heart/love_vars.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  на сэрцы</a> і <a href="https://github.com/beMesh/stickers/tree/master/1">на мэш налепкі</a></h4>
@@ -85,7 +85,7 @@
 		<ul>
 			<li>Набыць і палову падарыць каханай дзяўчыне або хлопцу.</li>
 			<li>Можна падарыць каханым людзям цалкам.</li>
-			<li>Правесці апытанку сярод знаёмых: ці могуць людзі любіць робата. Палову пакінуць машыне, палову - самаму цікаваму адказу.</li>
+			<li>Правесці апытанку сярод знаёмых: ці могуць людзі любіць робатаў. Палову пакінуць машыне, палову - самаму цікаваму адказу.</li>
 		</ul>
 
 		<p><strong>Памеры: </strong> сэрцы: вышыня 40 мм, мэш: 50на50 мм.</p>
