Product-17 spelling checked

--- a/product-17.html
+++ b/product-17.html
@@ -76,14 +76,14 @@
 		<h3>Гісторыя і апісанне</h3>
               
 
-<p>Pacman - адна з найпершых васьмібітных гульняў, якая пакарыла свет. За пэкмэнам ганяецца 4 істоты: Пінкі, Інкі, Блінкі і Клайд. Мы стварылі лінейку цішотак з імі.</p>
+<p>Pacman - адна з найпершых васьмібітных гульняў, якая пакарыла свет. За пэкмэнам ганяюцца 4 істоты: Пінкі, Інкі, Блінкі і Клайд. Мы стварылі лінейку цішотак з імі.</p>
 
 <h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Як звычайна: лепей прыглядзець для сябе памерчык загаддзя і насіць да дыр. Як бачна на фота, можна і зімой =)</li>
+			<li>Як звычайна: лепей прыглядзець для сябе памерчык загадзя і насіць да дыр. Як бачна на фота, можна і зімой =)</li>
 			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Часам гэта можа выглядаць даволі няшна.</li>
 		</ul>
 
