--- a/index.html
+++ b/index.html
@@ -106,6 +106,58 @@ END Donate block -->
         <!-- /.row -->
 
 
+<!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">3 р</h3>
+                                <h3><a href="product-31.html">Налепкі з раёнамі</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-31.html"><img class="img-responsive" src="images/products/pr31/love_big_cover_mini.JPG" alt=""></a>
+	            <div class="text1"><p>3 руб.</p></div>
+                </div>
+
+            </div>
+
+
+ 	    <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">4 р</h3>
+                                <h3><a href="product-32.html">Значкі Фаланстэра</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-32.html"><img class="img-responsive" src="images/products/pr32/love_n_geek_27_cover.JPG" alt=""></a>
+	            <div class="text1"><p>4 руб.</p></div>
+                </div>
+
+            </div>          
+
+  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">8 р</h3>
+                                <h3><a href="product-33.html">Магніта-пак</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-33.html"><img class="img-responsive" src="images/products/pr33/share_road_cover_mini.jpg" alt=""></a>
+	            <div class="text1"><p>8 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+
+
 
 <!-- Projects Row -->
         <div class="row products">
