update new products, fix workshops

--- a/workshop-3.html
+++ b/workshop-3.html
@@ -47,7 +47,7 @@
                 <h1 class="caption-product page-header">
                     Майстар-клас "Ethernet нішцякі"
                 </h1>
-                <h1 class="caption-price">5 руб</h1>
+                <h1 class="caption-price">5 руб.</h1>
             </div>             
             <div class="col-sm-4 caption-button">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default page-header">Удзельнічай</a>
