--- a/product-27.html
+++ b/product-27.html
@@ -44,13 +44,11 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-                <div class="caption-product">
-		            <h1 class="pull-right">65 руб.</h1>
-                    <h1 class="page-header">
-                        Худзі "Кахай і гіч"
-                    </h1>
-                </div>
-            </div>
+                <h1 class="caption-product page-header">
+                    Худзі "Кахай і гіч"
+                </h1>
+                <h1 class="caption-price">65 руб.</h1>
+            </div>               
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
