--- a/product-30.html
+++ b/product-30.html
@@ -44,14 +44,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row sticky-caption">
             <div class="col-sm-8">
-                <div class="caption-product">
-		            <h1 class="pull-right">5 руб.</h1>
-                    <h1 class="page-header">
-                        Кахай пак
-			<small>У камплекце 4 магніта і 4 налепкі</small>
-                    </h1>
-                </div>
-            </div>
+                <h1 class="caption-product page-header">
+                    Кахай пак
+                    <small>У камплекце 4 магніта і 4 налепкі</small>
+                </h1>
+                <h1 class="caption-price">5 руб.</h1>
+            </div>     
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
