--- a/product-32.html
+++ b/product-32.html
@@ -70,12 +70,12 @@
 		<h3>Апісанне</h3>
         <p>Значкі, як артыбут маюць папулярнасць і сёння. На фота значкі, якія суправаджаюць праекты Фаласнтэра:</p>
 	<ul>
-		<lo>Кактусы і яшчаркі - гэта айці-валанцёры, што заўсёды гатовы дапамагчы грамадскім ініцыятывам.</lo>
-		<lo>Гік-значкі, што падкрэсліваюць ваш гонар, як гіка, нэрда, і не_такога_як_усе.</lo>
-		<lo>Рады Фур'е. Для матэматыкаў, фізікаў, а таксама сябраў класічных "фаланстэраў" па-Фур'е.</lo>
-		<lo>З вясёлкай. Для любіцеляў эксперыментаў і усяго, што пачынаецца на "ф": "фрыкаў", "феміністак", "філасофіі", "фізікі" і г.д.</lo>
-		<lo>СС. Для дызайнераў і мастакоў, якія гатовыя дзяліцца сваёй творчасцю.<lo>
-	<ul>
+		<li>Кактусы і яшчаркі - гэта айці-валанцёры, што заўсёды гатовы дапамагчы грамадскім ініцыятывам.</li>
+		<li>Гік-значкі, што падкрэсліваюць ваш гонар, як гіка, нэрда, і не_такога_як_усе.</li>
+		<li>Рады Фур'е. Для матэматыкаў, фізікаў, а таксама сябраў класічных "фаланстэраў" па-Фур'е.</li>
+		<li>З вясёлкай. Для любіцеляў эксперыментаў і усяго, што пачынаецца на "ф": "фрыкаў", "феміністак", "філасофіі", "фізікі" і г.д.</li>
+		<li>СС. Для дызайнераў і мастакоў, якія гатовыя дзяліцца сваёй творчасцю.<li>
+	</ul>
 </p>	
 		<h4><a href="https://github.com/svetit/2017-signes/tree/master/for_print" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
