Words endings changed, comma added
'vashaga pamera i kolera' changed for 'vashaga pameru i koleru'.
Necessary comma added.

--- a/service-1.html
+++ b/service-1.html
@@ -70,8 +70,8 @@
 
 		<h3 class="vodst-up-30">Што падрыхтаваць:</h3>
 		<ul>
-			<li>Цішотку вашага памера і колера (ці набываеце самастойна, ці дамаўляемся маляваць на нашай).</li>
-			<li>Макет або выяву таго, што жадаеце далучыце спасылкай да замовы.</li>
+			<li>Цішотку вашага памеру і колеру (ці набываеце самастойна, ці дамаўляемся маляваць на нашай).</li>
+			<li>Макет або выяву таго, што жадаеце, далучыце спасылкай да замовы.</li>
 		</ul>
 
         <p class="vodst-up-30 vodst-down-30">* Замовіць паслугу можна праз кантактную форму </p>
